--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
     - "tmp/**/*"
     - ".git/**/*"
     - "bin/*"
+    - "db/migrate/*"
   TargetRubyVersion: 2.7
   SuggestExtensions: false
 
@@ -154,6 +155,9 @@ RSpec/NestedGroups:
   Max: 7
 
 RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+
+Metrics/AbcSize:
   Enabled: false
 
 Performance/CollectionLiteralInLoop:
